Fixed list from overflowing from cards.

--- a/css/scss/index.scss
+++ b/css/scss/index.scss
@@ -33,6 +33,8 @@
         }
 
         .card {
+            padding-bottom: 5px;
+
             &:hover {
                 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4), 0 6px 20px 0 rgba(0,0,0,0.4);
                 -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4), 0 6px 20px 0 rgba(0,0,0,0.4);
